feat: project authoritative citizen policies
